src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQuery_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQuery_StringErrorContext.class */
public final class ARBInternalformatQuery_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGetInternalformativ(IIIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQueryErrorContext");
        methods.put("glGetInternalformativ(IIILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQueryErrorContext");
        methods.put("glGetInternalformati(III)I", "net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQueryErrorContext");
        methods.put("glGetInternalformativ(III[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBInternalformatQueryErrorContext");
        return methods;
    }
}
